optimal elev first draft done

--- a/workflow/notebooks/benchmark_ensemble.ipynb
+++ b/workflow/notebooks/benchmark_ensemble.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "id": "2df130da-8ff7-481a-9f41-49220ebbb9de",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T16:00:20.497310Z",
-     "iopub.status.busy": "2023-12-27T16:00:20.496764Z",
-     "iopub.status.idle": "2023-12-27T16:00:20.864773Z",
-     "shell.execute_reply": "2023-12-27T16:00:20.863305Z",
-     "shell.execute_reply.started": "2023-12-27T16:00:20.497259Z"
+     "iopub.execute_input": "2023-12-27T17:47:30.737075Z",
+     "iopub.status.busy": "2023-12-27T17:47:30.736506Z",
+     "iopub.status.idle": "2023-12-27T17:47:30.779689Z",
+     "shell.execute_reply": "2023-12-27T17:47:30.778177Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:30.737026Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "id": "aea6c73e-9b4f-4bf1-a40c-0d4105e9eafb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T16:00:20.972195Z",
-     "iopub.status.busy": "2023-12-27T16:00:20.971673Z",
-     "iopub.status.idle": "2023-12-27T16:00:42.045905Z",
-     "shell.execute_reply": "2023-12-27T16:00:42.044013Z",
-     "shell.execute_reply.started": "2023-12-27T16:00:20.972147Z"
+     "iopub.execute_input": "2023-12-27T17:47:30.976725Z",
+     "iopub.status.busy": "2023-12-27T17:47:30.976221Z",
+     "iopub.status.idle": "2023-12-27T17:47:31.012044Z",
+     "shell.execute_reply": "2023-12-27T17:47:31.010189Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:30.976678Z"
     }
    },
    "outputs": [],
@@ -50,15 +59,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "62a43d5d-4b14-43c7-80ec-eb029a6e5529",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T16:00:42.050603Z",
-     "iopub.status.busy": "2023-12-27T16:00:42.049569Z",
-     "iopub.status.idle": "2023-12-27T16:00:42.089927Z",
-     "shell.execute_reply": "2023-12-27T16:00:42.088176Z",
-     "shell.execute_reply.started": "2023-12-27T16:00:42.050497Z"
+     "iopub.execute_input": "2023-12-27T17:47:31.296903Z",
+     "iopub.status.busy": "2023-12-27T17:47:31.296396Z",
+     "iopub.status.idle": "2023-12-27T17:47:31.331515Z",
+     "shell.execute_reply": "2023-12-27T17:47:31.329742Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:31.296857Z"
     }
    },
    "outputs": [],
@@ -80,15 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "id": "120b6681-df66-4e80-8f4b-d2e7495fe878",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T16:00:42.093002Z",
-     "iopub.status.busy": "2023-12-27T16:00:42.092209Z",
-     "iopub.status.idle": "2023-12-27T16:00:42.128549Z",
-     "shell.execute_reply": "2023-12-27T16:00:42.126942Z",
-     "shell.execute_reply.started": "2023-12-27T16:00:42.092924Z"
+     "iopub.execute_input": "2023-12-27T17:47:31.906609Z",
+     "iopub.status.busy": "2023-12-27T17:47:31.906070Z",
+     "iopub.status.idle": "2023-12-27T17:47:31.938807Z",
+     "shell.execute_reply": "2023-12-27T17:47:31.936959Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:31.906538Z"
     }
    },
    "outputs": [],
@@ -111,15 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "id": "59719ccf-11fb-4507-bc0a-86cf020e58d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:20.101992Z",
-     "iopub.status.busy": "2023-12-27T17:32:20.101428Z",
-     "iopub.status.idle": "2023-12-27T17:32:20.820711Z",
-     "shell.execute_reply": "2023-12-27T17:32:20.819573Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:20.101943Z"
+     "iopub.execute_input": "2023-12-27T17:47:32.596652Z",
+     "iopub.status.busy": "2023-12-27T17:47:32.596149Z",
+     "iopub.status.idle": "2023-12-27T17:47:33.384753Z",
+     "shell.execute_reply": "2023-12-27T17:47:33.383372Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:32.596606Z"
     }
    },
    "outputs": [],
@@ -136,15 +145,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "id": "5fcd531e-6d19-4f32-908e-04184401466e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:22.002582Z",
-     "iopub.status.busy": "2023-12-27T17:32:22.002358Z",
-     "iopub.status.idle": "2023-12-27T17:32:22.227650Z",
-     "shell.execute_reply": "2023-12-27T17:32:22.226145Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:22.002536Z"
+     "iopub.execute_input": "2023-12-27T17:47:33.386159Z",
+     "iopub.status.busy": "2023-12-27T17:47:33.385986Z",
+     "iopub.status.idle": "2023-12-27T17:47:33.589305Z",
+     "shell.execute_reply": "2023-12-27T17:47:33.588111Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:33.386143Z"
     }
    },
    "outputs": [],
@@ -180,47 +189,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "d5d0d0c5-b267-4ed5-bbc0-fa856fad5f1f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-12-27T17:45:31.206454Z",
-     "iopub.status.busy": "2023-12-27T17:45:31.206187Z",
-     "iopub.status.idle": "2023-12-27T17:45:31.757376Z",
-     "shell.execute_reply": "2023-12-27T17:45:31.755968Z",
-     "shell.execute_reply.started": "2023-12-27T17:45:31.206434Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['fd_id', 'occtype', 'found_type', 'cbfips', 'ftprntsrc', 'found_ht',\n",
-       "       'val_struct', 'sqft', 'val_cont', 'source', 'firmzone', 'ground_elv_m',\n",
-       "       'geometry'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nsi_struct.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "id": "e57e6ce7-c2d3-4fa4-9613-a52c31e004a5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:40.498784Z",
-     "iopub.status.busy": "2023-12-27T17:32:40.498186Z",
-     "iopub.status.idle": "2023-12-27T17:32:40.557929Z",
-     "shell.execute_reply": "2023-12-27T17:32:40.556008Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:40.498735Z"
+     "iopub.execute_input": "2023-12-27T17:47:35.588287Z",
+     "iopub.status.busy": "2023-12-27T17:47:35.587780Z",
+     "iopub.status.idle": "2023-12-27T17:47:35.647713Z",
+     "shell.execute_reply": "2023-12-27T17:47:35.645836Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:35.588242Z"
     }
    },
    "outputs": [],
@@ -291,15 +268,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 65,
    "id": "ada9027e-c015-4fec-bee8-cb05132e88b4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:41.376917Z",
-     "iopub.status.busy": "2023-12-27T17:32:41.376404Z",
-     "iopub.status.idle": "2023-12-27T17:32:41.416928Z",
-     "shell.execute_reply": "2023-12-27T17:32:41.415107Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:41.376870Z"
+     "iopub.execute_input": "2023-12-27T17:47:46.987321Z",
+     "iopub.status.busy": "2023-12-27T17:47:46.986788Z",
+     "iopub.status.idle": "2023-12-27T17:47:47.028348Z",
+     "shell.execute_reply": "2023-12-27T17:47:47.026417Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:46.987273Z"
     }
    },
    "outputs": [],
@@ -325,15 +302,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "id": "941ef1b8-8c14-4ba0-9ba4-879fe974dbf0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:42.599392Z",
-     "iopub.status.busy": "2023-12-27T17:32:42.598875Z",
-     "iopub.status.idle": "2023-12-27T17:32:42.634807Z",
-     "shell.execute_reply": "2023-12-27T17:32:42.633221Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:42.599345Z"
+     "iopub.execute_input": "2023-12-27T17:47:48.183939Z",
+     "iopub.status.busy": "2023-12-27T17:47:48.183420Z",
+     "iopub.status.idle": "2023-12-27T17:47:48.220598Z",
+     "shell.execute_reply": "2023-12-27T17:47:48.218750Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:48.183892Z"
     }
    },
    "outputs": [],
@@ -418,15 +395,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "id": "f63184d1-481b-411b-a2d6-7f192d8bb8c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:44.022599Z",
-     "iopub.status.busy": "2023-12-27T17:32:44.022064Z",
-     "iopub.status.idle": "2023-12-27T17:32:44.055639Z",
-     "shell.execute_reply": "2023-12-27T17:32:44.054053Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:44.022525Z"
+     "iopub.execute_input": "2023-12-27T17:47:48.662304Z",
+     "iopub.status.busy": "2023-12-27T17:47:48.661781Z",
+     "iopub.status.idle": "2023-12-27T17:47:48.696053Z",
+     "shell.execute_reply": "2023-12-27T17:47:48.694451Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:48.662257Z"
     }
    },
    "outputs": [],
@@ -462,15 +439,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "id": "fc9cbc33-bd3c-4379-9dc8-edabb73545f7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:44.682674Z",
-     "iopub.status.busy": "2023-12-27T17:32:44.682111Z",
-     "iopub.status.idle": "2023-12-27T17:32:44.715628Z",
-     "shell.execute_reply": "2023-12-27T17:32:44.713822Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:44.682605Z"
+     "iopub.execute_input": "2023-12-27T17:47:49.041834Z",
+     "iopub.status.busy": "2023-12-27T17:47:49.041341Z",
+     "iopub.status.idle": "2023-12-27T17:47:49.076435Z",
+     "shell.execute_reply": "2023-12-27T17:47:49.074617Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:49.041789Z"
     }
    },
    "outputs": [],
@@ -503,15 +480,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "id": "db2b3e0d-7253-45b0-9eb0-88b5acd96bbf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:45.922495Z",
-     "iopub.status.busy": "2023-12-27T17:32:45.921986Z",
-     "iopub.status.idle": "2023-12-27T17:32:45.994640Z",
-     "shell.execute_reply": "2023-12-27T17:32:45.992736Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:45.922449Z"
+     "iopub.execute_input": "2023-12-27T17:47:49.382092Z",
+     "iopub.status.busy": "2023-12-27T17:47:49.381592Z",
+     "iopub.status.idle": "2023-12-27T17:47:49.454937Z",
+     "shell.execute_reply": "2023-12-27T17:47:49.452684Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:49.382047Z"
     }
    },
    "outputs": [],
@@ -542,15 +519,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "id": "73c0b6e3-68e3-447d-ba42-a70f1a5a0421",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:46.767306Z",
-     "iopub.status.busy": "2023-12-27T17:32:46.766797Z",
-     "iopub.status.idle": "2023-12-27T17:32:46.800401Z",
-     "shell.execute_reply": "2023-12-27T17:32:46.798497Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:46.767262Z"
+     "iopub.execute_input": "2023-12-27T17:47:49.716871Z",
+     "iopub.status.busy": "2023-12-27T17:47:49.716369Z",
+     "iopub.status.idle": "2023-12-27T17:47:49.749736Z",
+     "shell.execute_reply": "2023-12-27T17:47:49.747884Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:49.716827Z"
     }
    },
    "outputs": [],
@@ -577,15 +554,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 71,
    "id": "d28457a0-b693-4514-b38e-e2ee0a9f8742",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:47.937887Z",
-     "iopub.status.busy": "2023-12-27T17:32:47.937375Z",
-     "iopub.status.idle": "2023-12-27T17:32:53.055822Z",
-     "shell.execute_reply": "2023-12-27T17:32:53.054737Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:47.937843Z"
+     "iopub.execute_input": "2023-12-27T17:47:49.892152Z",
+     "iopub.status.busy": "2023-12-27T17:47:49.891646Z",
+     "iopub.status.idle": "2023-12-27T17:47:55.699103Z",
+     "shell.execute_reply": "2023-12-27T17:47:55.697836Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:49.892105Z"
     }
    },
    "outputs": [
@@ -629,15 +606,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 72,
    "id": "4c4ec57b-c9d2-42d0-b7a1-6cc809b52561",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:53.057018Z",
-     "iopub.status.busy": "2023-12-27T17:32:53.056882Z",
-     "iopub.status.idle": "2023-12-27T17:32:53.070709Z",
-     "shell.execute_reply": "2023-12-27T17:32:53.070058Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:53.057006Z"
+     "iopub.execute_input": "2023-12-27T17:47:55.700425Z",
+     "iopub.status.busy": "2023-12-27T17:47:55.700289Z",
+     "iopub.status.idle": "2023-12-27T17:47:55.877103Z",
+     "shell.execute_reply": "2023-12-27T17:47:55.876311Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:55.700412Z"
     }
    },
    "outputs": [],
@@ -712,15 +689,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 73,
    "id": "9da0470a-5553-47bb-97ab-ac937aef3020",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:32:53.071316Z",
-     "iopub.status.busy": "2023-12-27T17:32:53.071201Z",
-     "iopub.status.idle": "2023-12-27T17:33:55.086811Z",
-     "shell.execute_reply": "2023-12-27T17:33:55.085962Z",
-     "shell.execute_reply.started": "2023-12-27T17:32:53.071305Z"
+     "iopub.execute_input": "2023-12-27T17:47:55.878104Z",
+     "iopub.status.busy": "2023-12-27T17:47:55.877908Z",
+     "iopub.status.idle": "2023-12-27T17:48:59.965453Z",
+     "shell.execute_reply": "2023-12-27T17:48:59.964620Z",
+     "shell.execute_reply.started": "2023-12-27T17:47:55.878085Z"
     }
    },
    "outputs": [
@@ -892,15 +869,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 74,
    "id": "d124645c-368f-4b45-b114-df8731e83aa5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:33:55.088269Z",
-     "iopub.status.busy": "2023-12-27T17:33:55.088129Z",
-     "iopub.status.idle": "2023-12-27T17:34:04.535173Z",
-     "shell.execute_reply": "2023-12-27T17:34:04.534048Z",
-     "shell.execute_reply.started": "2023-12-27T17:33:55.088256Z"
+     "iopub.execute_input": "2023-12-27T17:48:59.966871Z",
+     "iopub.status.busy": "2023-12-27T17:48:59.966729Z",
+     "iopub.status.idle": "2023-12-27T17:49:09.569579Z",
+     "shell.execute_reply": "2023-12-27T17:49:09.568844Z",
+     "shell.execute_reply.started": "2023-12-27T17:48:59.966858Z"
     }
    },
    "outputs": [
@@ -953,15 +930,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 75,
    "id": "003f5629-dbc4-4da1-b408-5a0f6b96351f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:34:04.535952Z",
-     "iopub.status.busy": "2023-12-27T17:34:04.535824Z",
-     "iopub.status.idle": "2023-12-27T17:39:58.760864Z",
-     "shell.execute_reply": "2023-12-27T17:39:58.760079Z",
-     "shell.execute_reply.started": "2023-12-27T17:34:04.535939Z"
+     "iopub.execute_input": "2023-12-27T17:49:09.570362Z",
+     "iopub.status.busy": "2023-12-27T17:49:09.570239Z",
+     "iopub.status.idle": "2023-12-27T17:55:10.089331Z",
+     "shell.execute_reply": "2023-12-27T17:55:10.088515Z",
+     "shell.execute_reply.started": "2023-12-27T17:49:09.570350Z"
     }
    },
    "outputs": [
@@ -1175,15 +1152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 76,
    "id": "a51a9926-7c09-4d66-b60d-92a3ea946afd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:39:58.761814Z",
-     "iopub.status.busy": "2023-12-27T17:39:58.761673Z",
-     "iopub.status.idle": "2023-12-27T17:40:47.779499Z",
-     "shell.execute_reply": "2023-12-27T17:40:47.777602Z",
-     "shell.execute_reply.started": "2023-12-27T17:39:58.761801Z"
+     "iopub.execute_input": "2023-12-27T17:55:10.090245Z",
+     "iopub.status.busy": "2023-12-27T17:55:10.090104Z",
+     "iopub.status.idle": "2023-12-27T17:55:59.054308Z",
+     "shell.execute_reply": "2023-12-27T17:55:59.052130Z",
+     "shell.execute_reply.started": "2023-12-27T17:55:10.090232Z"
     }
    },
    "outputs": [],
@@ -1232,15 +1209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 77,
    "id": "ba65bf86-18ac-42af-b769-6dbf1b8b5ea4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-12-27T17:40:47.781032Z",
-     "iopub.status.busy": "2023-12-27T17:40:47.780841Z",
-     "iopub.status.idle": "2023-12-27T17:40:47.916466Z",
-     "shell.execute_reply": "2023-12-27T17:40:47.915637Z",
-     "shell.execute_reply.started": "2023-12-27T17:40:47.781015Z"
+     "iopub.execute_input": "2023-12-27T17:55:59.058076Z",
+     "iopub.status.busy": "2023-12-27T17:55:59.057473Z",
+     "iopub.status.idle": "2023-12-27T17:55:59.304944Z",
+     "shell.execute_reply": "2023-12-27T17:55:59.304371Z",
+     "shell.execute_reply.started": "2023-12-27T17:55:59.058026Z"
     }
    },
    "outputs": [
