starting to generate main figures

--- a/workflow/notebooks/allocate_funds.ipynb
+++ b/workflow/notebooks/allocate_funds.ipynb
@@ -6,11 +6,11 @@
    "id": "386aba49-47a9-46b3-8e2a-df52f32f0085",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-02T21:08:48.091339Z",
-     "iopub.status.busy": "2024-01-02T21:08:48.090816Z",
-     "iopub.status.idle": "2024-01-02T21:08:48.155894Z",
-     "shell.execute_reply": "2024-01-02T21:08:48.154371Z",
-     "shell.execute_reply.started": "2024-01-02T21:08:48.091289Z"
+     "iopub.execute_input": "2024-01-03T16:28:47.796855Z",
+     "iopub.status.busy": "2024-01-03T16:28:47.796311Z",
+     "iopub.status.idle": "2024-01-03T16:28:48.113293Z",
+     "shell.execute_reply": "2024-01-03T16:28:48.111792Z",
+     "shell.execute_reply.started": "2024-01-03T16:28:47.796808Z"
     }
    },
    "outputs": [],
@@ -21,15 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3af8230c-4c9d-4b27-9dd5-793a71a8f17b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-02T21:15:24.184999Z",
-     "iopub.status.busy": "2024-01-02T21:15:24.184792Z",
-     "iopub.status.idle": "2024-01-02T21:15:24.228809Z",
-     "shell.execute_reply": "2024-01-02T21:15:24.227635Z",
-     "shell.execute_reply.started": "2024-01-02T21:15:24.184982Z"
+     "iopub.execute_input": "2024-01-03T16:28:48.116041Z",
+     "iopub.status.busy": "2024-01-03T16:28:48.115564Z",
+     "iopub.status.idle": "2024-01-03T16:28:49.790421Z",
+     "shell.execute_reply": "2024-01-03T16:28:49.788887Z",
+     "shell.execute_reply.started": "2024-01-03T16:28:48.115994Z"
     }
    },
    "outputs": [],
@@ -53,11 +53,11 @@
    "id": "844d8e3e-e076-4198-af84-e2518f9e6876",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-02T21:09:10.357167Z",
-     "iopub.status.busy": "2024-01-02T21:09:10.353646Z",
-     "iopub.status.idle": "2024-01-02T21:09:10.501936Z",
-     "shell.execute_reply": "2024-01-02T21:09:10.500827Z",
-     "shell.execute_reply.started": "2024-01-02T21:09:10.357108Z"
+     "iopub.execute_input": "2024-01-03T16:28:49.792231Z",
+     "iopub.status.busy": "2024-01-03T16:28:49.791882Z",
+     "iopub.status.idle": "2024-01-03T16:28:49.809279Z",
+     "shell.execute_reply": "2024-01-03T16:28:49.808193Z",
+     "shell.execute_reply.started": "2024-01-03T16:28:49.792208Z"
     }
    },
    "outputs": [],
@@ -92,11 +92,11 @@
    "id": "8e52ad1d-dc21-4e5c-bb38-9762ab207cd5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-02T21:09:10.503895Z",
-     "iopub.status.busy": "2024-01-02T21:09:10.503445Z",
-     "iopub.status.idle": "2024-01-02T21:09:20.109961Z",
-     "shell.execute_reply": "2024-01-02T21:09:20.108720Z",
-     "shell.execute_reply.started": "2024-01-02T21:09:10.503848Z"
+     "iopub.execute_input": "2024-01-03T16:28:49.810049Z",
+     "iopub.status.busy": "2024-01-03T16:28:49.809857Z",
+     "iopub.status.idle": "2024-01-03T16:28:58.962396Z",
+     "shell.execute_reply": "2024-01-03T16:28:58.960358Z",
+     "shell.execute_reply.started": "2024-01-03T16:28:49.810029Z"
     }
    },
    "outputs": [],
@@ -118,11 +118,11 @@
    "id": "28f4df0b-9d37-4511-9cb7-f31f135ef9bf",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-02T21:09:20.115542Z",
-     "iopub.status.busy": "2024-01-02T21:09:20.114457Z",
-     "iopub.status.idle": "2024-01-02T21:09:22.421501Z",
-     "shell.execute_reply": "2024-01-02T21:09:22.420595Z",
-     "shell.execute_reply.started": "2024-01-02T21:09:20.115481Z"
+     "iopub.execute_input": "2024-01-03T16:28:58.966524Z",
+     "iopub.status.busy": "2024-01-03T16:28:58.966005Z",
+     "iopub.status.idle": "2024-01-03T16:29:02.099055Z",
+     "shell.execute_reply": "2024-01-03T16:29:02.097433Z",
+     "shell.execute_reply.started": "2024-01-03T16:28:58.966469Z"
     }
    },
    "outputs": [],
@@ -144,11 +144,11 @@
    "id": "5a0b81e3-e5ce-467e-b34a-ee5dabbe9e06",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-02T21:09:22.422627Z",
-     "iopub.status.busy": "2024-01-02T21:09:22.422391Z",
-     "iopub.status.idle": "2024-01-02T21:09:22.470446Z",
-     "shell.execute_reply": "2024-01-02T21:09:22.469643Z",
-     "shell.execute_reply.started": "2024-01-02T21:09:22.422603Z"
+     "iopub.execute_input": "2024-01-03T16:29:02.100205Z",
+     "iopub.status.busy": "2024-01-03T16:29:02.100045Z",
+     "iopub.status.idle": "2024-01-03T16:29:02.144414Z",
+     "shell.execute_reply": "2024-01-03T16:29:02.143396Z",
+     "shell.execute_reply.started": "2024-01-03T16:29:02.100189Z"
     }
    },
    "outputs": [],
@@ -171,11 +171,11 @@
    "id": "b6d4ae58-fb71-442c-9e20-27f3570fdb5f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-02T21:09:22.471668Z",
-     "iopub.status.busy": "2024-01-02T21:09:22.471385Z",
-     "iopub.status.idle": "2024-01-02T21:09:22.501600Z",
-     "shell.execute_reply": "2024-01-02T21:09:22.500841Z",
-     "shell.execute_reply.started": "2024-01-02T21:09:22.471639Z"
+     "iopub.execute_input": "2024-01-03T16:29:02.145264Z",
+     "iopub.status.busy": "2024-01-03T16:29:02.145119Z",
+     "iopub.status.idle": "2024-01-03T16:29:02.212552Z",
+     "shell.execute_reply": "2024-01-03T16:29:02.211058Z",
+     "shell.execute_reply.started": "2024-01-03T16:29:02.145248Z"
     }
    },
    "outputs": [],
@@ -256,15 +256,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 8,
    "id": "1325c0f3-bd09-439c-af3f-329a3843fe75",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-01-02T22:45:06.057181Z",
-     "iopub.status.busy": "2024-01-02T22:45:06.056991Z",
-     "iopub.status.idle": "2024-01-02T22:45:06.636282Z",
-     "shell.execute_reply": "2024-01-02T22:45:06.635548Z",
-     "shell.execute_reply.started": "2024-01-02T22:45:06.057166Z"
+     "iopub.execute_input": "2024-01-03T16:29:02.213815Z",
+     "iopub.status.busy": "2024-01-03T16:29:02.213606Z",
+     "iopub.status.idle": "2024-01-03T16:29:02.439314Z",
+     "shell.execute_reply": "2024-01-03T16:29:02.437747Z",
+     "shell.execute_reply.started": "2024-01-03T16:29:02.213794Z"
     }
    },
    "outputs": [],
@@ -309,7 +309,8 @@
      "iopub.status.idle": "2024-01-02T22:45:09.078504Z",
      "shell.execute_reply": "2024-01-02T22:45:09.077747Z",
      "shell.execute_reply.started": "2024-01-02T22:45:06.637343Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -4786,6 +4787,7 @@
     "# Write out the dataframe of objective values\n",
     "# and the dictionary of policy to fd_ids that are\n",
     "# elevated\n",
+    "# TODO Need to add DDF_TYPE & scenario to filepaths...\n",
     "obj_filep = join(FO, 'pol_obj_vals.pqt')\n",
     "objs.to_parquet(obj_filep)\n",
     "\n",
@@ -4799,7 +4801,13 @@
     "pareto_c = join(FO, 'pareto_community.pqt')\n",
     "\n",
     "full_pareto.to_parquet(pareto_f)\n",
-    "community_pareto.to_parquet(pareto_c)\n"
+    "community_pareto.to_parquet(pareto_c)\n",
+    "\n",
+    "# Write out the dataframe of aggregated metrics\n",
+    "# for each  home\n",
+    "ens_agg_filep = join(FO, 'ens_agg.pqt')\n",
+    "# Need to drop the bin column we made\n",
+    "sort_df.drop(columns=['rel_eal_bin']).to_parquet(ens_agg_filep)"
    ]
   }
  ],
