moving nb to scripts

--- a/workflow/notebooks/download_data.ipynb
+++ b/workflow/notebooks/download_data.ipynb
@@ -88,27 +88,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "d66177a7-0497-41bb-b719-28b63af8e5ec",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-11-09T21:11:00.125744Z",
-     "iopub.status.busy": "2023-11-09T21:11:00.125404Z",
-     "iopub.status.idle": "2023-11-09T21:11:00.154102Z",
-     "shell.execute_reply": "2023-11-09T21:11:00.152178Z",
-     "shell.execute_reply.started": "2023-11-09T21:11:00.125716Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# NSI API is down at least\n",
-    "# from Oct 13 through Oct 19\n",
-    "# so testing on other files\n",
-    "temp = DOWNLOAD.iloc[1:]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "a8b0ad8a-7312-45ad-8134-4fdcf71c388b",
    "metadata": {
@@ -130,7 +109,7 @@
     }
    ],
    "source": [
-    "download_raw(temp, wcard_dict)"
+    "download_raw(DOWNLOAD, wcard_dict)"
    ]
   }
  ],
