--- a/workflow/notebooks/process_ev.ipynb
+++ b/workflow/notebooks/process_ev.ipynb
@@ -225,10 +225,13 @@
    },
    "outputs": [],
    "source": [
-    "# Read NSI, reset index upon reading\n",
-    "# TODO - this will be json...\n",
-    "nsi_filep = join(EXP_DIR_R, FIPS, 'nsi.pqt')\n",
-    "nsi_full = pd.read_parquet(nsi_filep).reset_index(drop=True)"
+    "# Read NSI\n",
+    "nsi_filep = join(EXP_DIR_R, FIPS, 'nsi.json')\n",
+    "with open(nsi_filep, 'r') as fp:\n",
+    "    nsi_full = json.load(fp)\n",
+    "\n",
+    "# json normalize \n",
+    "nsi_df = pd.json_normalize(nsi_full['features'])"
    ]
   },
   {
@@ -249,10 +252,9 @@
     "# Convert to gdf\n",
     "# This is useful for some spatial joins we need to perform\n",
     "# Convert to geodataframe\n",
-    "geometry = gpd.points_from_xy(nsi_full['properties.x'],\n",
-    "                             nsi_full['properties.y'])\n",
-    "# The NSI CRS is EPSG 4326\n",
-    "nsi_gdf = gpd.GeoDataFrame(nsi_full, geometry=geometry,\n",
+    "geometry = gpd.points_from_xy(nsi_df['properties.x'],\n",
+    "                              nsi_df['properties.y'])\n",
+    "nsi_gdf = gpd.GeoDataFrame(nsi_df, geometry=geometry,\n",
     "                           crs=NSI_CRS)\n",
     "\n",
     "# Drop the following columns\n",
@@ -750,8 +752,7 @@
     "\n",
     "# Rename DamageCategory\n",
     "naccs_res = naccs_res.rename(columns={'DamageCategory': 'dam_cat',\n",
-    "                                      'bld_type': 'ddf_id'})\n",
-    "# Get ddf_id from "
+    "                                      'bld_type': 'ddf_id'})"
    ]
   },
   {
