more script updates

--- a/workflow/notebooks/allocate_funds.ipynb
+++ b/workflow/notebooks/allocate_funds.ipynb
@@ -73,7 +73,7 @@
     "# we're using 'mid' and 'naccs' but for generating\n",
     "# our sensitivity analysis results we will need to pass\n",
     "# in the other scenarios and 'hazus'\n",
-    "# Very well suited for snakemake :) \n",
+    "# Very well suited for snakemake (down the line)\n",
     "SCENARIO = 'Mid'\n",
     "DDF_TYPE = 'naccs'"
    ]
